# agents_knowledge_sharing

./: README.md  README_SECURITY_AGENT.md  pyproject.toml  requirements.txt  security_agent.py
agent_test/: file_with_sec_violations.py  requirements.txt
docs/: mcp_presentation.html  requirements.txt
security_findings/: findings.json
